<resources>
    <string name="app_name">QuizApp</string>
    <string name="get_started_button">GET STARTED</string>
    <string name="get_contact_button">CHOOSE CONTACT</string>
    <string name="input_name">Your name</string>
    <string name="user_name">The name of the player is:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_question_button">Next question</string>
    <string name="try_again_button">TRY AGAIN</string>
    <string name="result_text">Quiz result</string>
    <string name="get_image_button">CHOOSE IMAGE</string>
    <string name="home">Home</string>
    <string name="top_app_bar">Quiz app</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="list">List of questions</string>
    <string name="new_question">New question</string>
    <string name="header_title">Menu options</string>
    <string name="header_text">Enjoy the quiz</string>
    <string name="welcome_text">Enjoy the quiz app, where you can:</string>
    <string name="skills">TEST YOUR SKILLS</string>
    <string name="read">READ QUESTIONS</string>
    <string name="create_question">CREATE QUESTION</string>
    <string name="hight_score">Hight score</string>
    <string name="userName">Username</string>
    <string name="answer">Answer</string>
    <string name="answers">Answers</string>
    <string name="correctAnswer">Correct answer</string>
    <string name="addQuestion">ADD QUESTION</string>
    <string name="question">Question</string>
</resources>