<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.StartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/dark_teal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/playerNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerNameInput"
        app:layout_constraintBottom_toTopOf="@+id/contactButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="221dp" />

    <Button
        android:id="@+id/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_button"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="386dp" />

    <Button
        android:id="@+id/contactButton"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_teal"
        android:text="@string/get_contact_button"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="314dp" />

</androidx.constraintlayout.widget.ConstraintLayout>